# rcksett/ignit2021/aulatypescript/aula1/src/routers/routers.ts
@@ -1,29 +1,31 @@
 import { Router, Request, Response } from "express";
-import { categoryRoutes } from "../modules/cars/useCases/createCategory/index";
-import { ListcategoryRoutes } from "../modules/cars/useCases/ListCategory/index";
-import { EspecificationsController } from "../modules/cars/useCases/createEspecificacoes/index";
+import {CategoryController} from "../modules/cars/useCases/createCategory/categoryControllers"
+import { ListCategory } from "../modules/cars/useCases/ListCategory/listCategory";
+import { EspecificacoesCController } from "../modules/cars/useCases/createEspecificacoes/especificationsControllers";
+import { fileCategory } from "../modules/cars/useCases/fileCategory/fileCategory";
+
+
 import multer from "multer";
-import { fileCategoryHandle } from "../modules/cars/useCases/fileCategory";
+const createCategoryController = new CategoryController()
+const createEspecificacoesCController = new EspecificacoesCController()
+const fileCategoryHandle = new fileCategory()
+const listCategory = new ListCategory()
 const upload = multer({
   dest: "./tmp"
 });
 
 const route = Router();
 
-route.post("/curse", (req, res) => {
-  return categoryRoutes.createCategory(req, res);
-});
+route.post("/curse", createCategoryController.createCategory);
 
-route.post("/especi", (req: Request, res: Response) => {
-  return EspecificationsController.handle(req, res);
-});
+route.post("/especi", createEspecificacoesCController.handle);
 
 route.post("/import", upload.single("file"), (req: Request, res: Response) => {
   fileCategoryHandle.handle(req, res);
 });
 
 route.get("/curse", (req, res) => {
-  return ListcategoryRoutes.List(req, res);
+  return listCategory.List(req, res);
 });
 
 export default route;
